mocks/without-sidecar/mock-employees-api-without-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-api

spec:
  selector:
    matchLabels:
      app: employees
  template:
    metadata:
      labels:
        app: employees
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      imagePullSecrets:
        - name: quay-puller
        - name: dock-temp-cred
      volumes:
        - name: shared-volume
          emptyDir: {}
        - name: mocks-file
          configMap:
            name: json-mappings

      containers:
        - name: wiremock-server
          image: "quay.io/zgrinber/wiremock:latest"
          command: [ "bash" , "-c" ,"java -jar /var/wiremock/lib/wiremock-jre8-standalone.jar --port 9999"]
          volumeMounts:
            - mountPath: /tmp/mocks
              name: mocks-file
          ports:
            - containerPort: 9999
              name: http2-9999
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh","-c", " sleep 1 ; curl -X POST http://localhost:9999/__admin/mappings/import -T /tmp/mocks/mappings.json " ]
