mocks/without-sidecar/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    purpose: mock-microservice
  name: employees-api
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: employees-api
    weight: 100
